[package]
name = "permissionless-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/accounts",
    "crates/tx_builder",
    "crates/erc7579",
]

[dependencies]
accounts = { path = "crates/accounts" }
tx_builder = { path = "crates/tx_builder" }
erc7579 = { path = "crates/erc7579" }
ethers = { version = "2.0", features = ["abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.14"
crossterm = "0.19"
hex = "0.4"
clap = { version = "4.3", features = ["derive"] }

