
[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
tx_builder = { path = "../tx_builder" }
erc7579 = { path = "../erc7579" }
ethers = { version = "2.0", features = ["abigen"] }
ethereum-types = "0.14"  # or whatever version is compatible with your ethers version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
