[package]
name = "erc7579"
version = "0.1.0"
edition = "2021"

[dependencies]
tx_builder = { path = "../tx_builder" }
url = "2.3.1"  # You can use the latest version available
ethers = { version = "2.0", features = ["abigen"] }
ethereum-types = "0.14"  # or whatever version is compatible with your ethers version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

